Started to add variables

--- a/project-01/src/sass/base.scss
+++ b/project-01/src/sass/base.scss
@@ -9,10 +9,10 @@ html {
 }
 
 body {
-  font-size: $primary-text-size;
+  font-size: $first-text-size;
   line-height: $main-text-height;
   font-family: $main-font-stack;
-  color: $primary-grey-color;
+  color: $first-grey-color;
   // counter-reset: count-problem count-block;
   margin: 0px;
   padding: 0px;
