--- a/project-01/src/sass/components/burger.scss
+++ b/project-01/src/sass/components/burger.scss
@@ -6,11 +6,10 @@
 
   &::before,
   &::after {
-    display: block;
-    content: '';
+    @include pseudo($display: block);
     width: 100%;
     height: 2px;
-    background-color: #000000;
+    background-color: $first-black-color;
     position: absolute;
     left: 0;
     transition: all 0.1s linear;
@@ -47,7 +46,7 @@
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: #000000;
+  background-color: $first-black-color;
   left: 0;
   top: 50%;
   transform: translateY(-50%);
