--- a/project-01/src/sass/components/form-registration.scss
+++ b/project-01/src/sass/components/form-registration.scss
@@ -1,18 +1,21 @@
 .input-field {
   width: 280px;
-  border: 2px solid #ffffff;
-  font-size: 13px;
-  color: #ffffff;
-  line-height: 2.325;
+  border: 2px solid $first-white-color;
+  @include font-height($third-text-size, 2.325);
+  // font-size: 13px;
+  // line-height: 2.325;
+  color: $first-white-color;
   background-color: transparent;
   padding: 8px 5px 10px 18px;
 
   &::-webkit-input-placeholder {
-    font-size: 13px;
-    font-family: "Montserrat";
-    color: #ffffff;
-    font-weight: bold;
-    line-height: 2.325;
+    @include font-height($third-text-size, 2.325);
+    // font-size: 13px;
+    // line-height: 2.325;
+    @include font-family-settings($font-family-monts, $font-weight-bold, $first-white-color);
+    // font-family: "Montserrat";
+    // font-weight: bold;
+    // color: $first-white-color;
   }
 
   @include tablet {
@@ -21,14 +24,16 @@
 
     @include desktop {
       width: 620px;
-      border: 1px solid #ffffff;
-      font-size: 21px;
-      line-height: 1.8;
+      border: 1px solid $first-white-color;
+      @include font-height($twenty-one-text-size, 1.8);
+      // font-size: 21px;
+      // line-height: 1.8;
       padding: 16px 5px 16px 26px;
 
       &::-webkit-input-placeholder {
-        font-size: 21px;
-        line-height: 1.8;
+        @include font-height($twenty-one-text-size, 1.8);
+        // font-size: 21px;
+        // line-height: 1.8;
       }
     }
 
