--- a/project-01/src/sass/components/section-warranty.scss
+++ b/project-01/src/sass/components/section-warranty.scss
@@ -1,44 +1,58 @@
 .section-warranty__wrapper {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
+  @include center-flex('col-ver');
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // text-align: center;
+
 
   @include tablet {
     padding: 0px 40px;
-    margin-bottom: 44px;}
+    margin-bottom: 44px;
+  }
 
   @include desktop {
     padding: 0px 35px;
-    margin-bottom: 78px;}
+    margin-bottom: 80px;
+  }
 
   @include desktop-wide {
     padding: 0px 156px 0px 186px;
-    margin-bottom: 110px;}
+    margin-bottom: 110px;
+  }
 }
 
 .section-warranty__title {
-  font-size: 20px;
-  color: #111517;
+  @include font-settings($tenth-text-size, 1.2, 1px);
+  // font-size: 20px;
+  // line-height: 1.2;
+  // letter-spacing: 1px;
+  // color: #111517;
   margin: 0px 0px 22px;
-  letter-spacing: 1px;
 
   @include tablet {
-    font-size: 26px;
-    line-height: 2.405;
-    margin: 0px 0px 10px}
+    @include font-height($twenty-six-text-size, 2.405);
+    // font-size: 26px;
+    // line-height: 2.405;
+    margin: 0px 0px 10px
+  }
 
   @include desktop {
-    font-size: 42px;
-    line-height: 1.489;
+    @include font-settings($forty-two-text-size, 1.489, 1.7px);
+    // font-size: 42px;
+    // line-height: 1.489;
+    // letter-spacing: 1.7px;
     margin: 0px 0px 28px;
-    letter-spacing: 1.7px;}
+  }
 
   @include desktop-wide {
-    font-size: 46px;
-    line-height: 1.365;
+    @include font-settings($forty-six-text-size, 1.365, 2.3px);
+    // font-size: 46px;
+    // line-height: 1.365;
+    // letter-spacing: 2.3px;
     margin: 0px 0px 38px;
-    letter-spacing: 2.3px;
-    padding-right: 26px;}
+    padding-right: 26px;
+  }
 }
 
 .section-warranty__wrapper-list {
@@ -46,18 +60,22 @@
   background: #f1f1f1;
 
   @include tablet {
-    padding: 0px 55px 0px 66px;}
+    padding: 0px 55px 0px 66px;
+  }
 
   @include desktop {
-    padding: 0px 126px;}
+    padding: 0px 126px;
+  }
 
   @include desktop-wide {
-    padding: 0px 102px;}
+    padding: 0px 102px;
+  }
 }
 
 .section-warranty__items {
   margin-bottom: 22px;
 
   @include tablet {
-    margin-bottom: 30px;}
+    margin-bottom: 30px;
+  }
 }
