--- a/project-01/src/sass/helpers/mixins.scss
+++ b/project-01/src/sass/helpers/mixins.scss
@@ -7,84 +7,83 @@
     align-items: center;
   }
 
+  @else if $type=='col-ver' {
+    flex-direction: column;
+    align-items: center;
+  }
+
   @else if $type=='hor' {
     justify-content: center;
   }
 
   @else if $type=='ver' {
+    flex-direction: row;
     align-items: center;
   }
 
   @else if $type=='spbtw' {
+    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    // align-items: center;
   }
 }
-
+// @include center-flex('spbtw');
 
 @mixin pseudo($display: inline-block, $content: '') {
   display: $display;
   content: $content;
 }
+// @include pseudo(inline-block, '\2107');
+// @include pseudo($display: block);
 
+@mixin font-family-settings($family, $weight, $color) {
+  font-family: $family;
+  font-weight: $weight;
+  color: $color;
+}
+// @include font-family-settings('Montserrat', bold,  #111517);
 
-@mixin font-settings($size, $height) {
+@mixin font-settings($size, $height, $letter-spacing) {
   font-size: $size;
   line-height: $height;
+  letter-spacing: $letter-spacing;
 }
+// @include font-settings($primary-text-size, 1.6, 1.2px);
 
-@mixin font-colors($size, $height) {
+@mixin font-colors($size, $color) {
   font-size: $size;
   color: $color;
 }
-
 // @include font-colors(50px, green);
+
+@mixin font-height($size, $height) {
+  font-size: $size;
+  line-height: $height;
+}
+// @include font-height($primary-text-size, 1.6);
 
 
 @mixin width-percent($width-elem, $width-cont) {
   width: $width-elem / $width-cont * 100%;
 }
-
+// @include width-percent(493px, 1210px);
 // width: 300px / 960px * 100%;
 
 @mixin height-percent($height-elem, $height-cont) {
   height: $height-elem / $height-cont * 100%;
 }
-
+// @include height-percent(644px, 1210px);
 // height: 300px / 960px * 100%;
 
+@mixin bgr-image($path, $size, $repeat) {
+  background-image: url($path);
+  background-size: $size;
+  background-repeat: $repeat;
+  // background-position: center; ($pos)
+}
+// @include bgr-image('../../images/bgr-01.png', contain, no-repeat, center);
 
-// @ min-screen(width) // shortcut for @media screen and (min-width ...)
-// @ max-screen(width) // shortcut for @media screen and (max-width ...)
-// @ screen(min-width, max-width) // shortcut for @media screen and (min-width ...) and (max-width ...)
-
-// @include screen(768, 1280) { ... }
-// @media screen and ( min-width: 768px ) and ( max-width: 1280px )
-// {
-//   ...
-// }
-
-// @include screen(320, 640)  { ... }
-// @media screen and ( min-width: 320px ) and ( max-width: 640px )
-// {
-//   ...
-// }
-
-// @media #{$format} {
-//   .menu {
-//     @media (max-width: $mobile) {
-//       width: 100%;
-//     }
-//     @media (max-width: $tablet) {
-//       width: 60%;
-//     }
-//     @media (max-width: $desktop) {
-//       width: 30%;
-//     }
-//   }
-// }
-
-
+// Mixins for Media Queries
 // Small devices
 @mixin mobile {
   @media (min-width: #{$screen-mob}) {
@@ -119,28 +118,3 @@
     @content;
   }
 }
-
-// В качестве параметра $screen можем указать любой размер экрана.
-
-// использование созданных миксинов в базовом коде SCSS:
-// .container {
-//   padding: 0 15px;
-
-// 320px window width and more
-// @include mobile {
-//   padding: 0 20px;
-// }
-
-// 1280px window width and more
-// @include desktop {
-//   margin-left: auto;
-//   margin-right: auto;
-//   max-width: 1100px;
-// }
-
-// 1400px window width and more
-// @include rwd(1400) {
-//   margin-bottom: 20px;
-//   margin-top: 20px;
-// }
-// }
