--- a/project-01/src/sass/helpers/variables.scss
+++ b/project-01/src/sass/helpers/variables.scss
@@ -1,11 +1,28 @@
+// screen size
+$screen-format: screen;
+$screen-mobile: 320px;
+$screen-tablet: 768px;
+$screen-desktop: 1280px;
+$screen-desktop-wide: 1680px;
+
+
+// breakpoints
+// small tablets and large smartphones (landscape view)
+$screen-mob: 360px;
+// small tablets
+$screen-tabl: 808px;
+// tablets and small desktops
+$screen-desk: 1320px;
+// large tablets and desktops
+$screen-desk-wide: 1720px;
+
+
+// font-family: 'Montserrat', sans-serif;
 $main-font-stack: 'Montserrat','Tahoma', sans-serif;
 $font-family-monts: 'Montserrat', sans-serif;
 $main-font-tahoma: 'Tahoma', sans-serif;
 
-
-// font-family: 'Montserrat', sans-serif;
-
-
+// font-weight
 $font-weight-extrabold: 800;
 $font-weight-bold: 700;
 $font-weight-semibold: 600;
@@ -18,22 +35,55 @@ $font-weight-regular: 400;
 // $font-style-italic: italic;
 
 
-$primary-text-size: 11px;
-$secondary-text-size: 13px;
-$primary-font-size: 15px;
-$secondary-font-size: 20px;
+// font-size
+$first-text-size: 11px;
+$second-text-size: 12px;
+$third-text-size: 13px;
+$fourth-text-size: 14px;
+$fifth-text-size: 15px;
+$sixth-text-size: 16px;
+$seventh-text-size: 17px;
+$eigth-text-size: 18px;
+$ninth-text-size: 19px;
+$tenth-text-size: 20px;
+
+// Переназвати та вставити в код
+// $custom-font-size: 16.667px;
+// $custom-font-size: 37.5px;
+
+$twenty-one-text-size: 21px;
+$twenty-two-text-size: 22px;
+$twenty-five-text-size: 25px;
+$twenty-six-text-size: 26px;
+$twenty-seven-text-size: 27px;
+$twenty-nine-text-size: 29px;
+
+
+$forty-two-text-size: 42px;
+$forty-six-text-size: 46px;
+
+
+// $tenth-font-size: 20px;
+// $tenth-font-size: 20px;
+
 
 $main-text-height: 1.2;
 $primary-text-height: 1.35;
 $primary-font-height: 1.5;
 $secondary-text-height: 1.8;
 
-$primary-white-color: #ffffff;
-$primary-lightgrey-color: #b9b9b9;
-$primary-grey-color: #858585;
-$primary-dark-color: #18191d;
-$secondary-dark-color: #111517;
-$primary-orange-color: #ff6b08;
+$first-white-color: #ffffff;
+$second-white-color: #fdfefe;
+$third-white-color: #e0e0e0;
+$first-lightgrey-color: #d1d1d1;
+$second-lightgrey-color: #b9b9b9;
+$first-grey-color: #858585;
+$first-red-color: #ff0000;
+$first-orange-color: #ff6b08;
+$first-green-color: #09ab09;
+$first-lightdark-color: #111517;
+$first-dark-color: #18191d;
+$first-black-color: #000000;
 
 
 // $background-light-color: rgb(149, 225, 211);
@@ -49,28 +99,3 @@ $primary-orange-color: #ff6b08;
 
 // $ligth-gradient-color: rgba(252, 227, 138, 0.9);
 // $dark-gradient-color: rgba(243, 129, 129, 0.9);
-
-$screen-format: screen;
-$screen-mobile: 320px;
-$screen-tablet: 768px;
-$screen-desktop: 1280px;
-$screen-desktop-wide: 1680px;
-
-// breakpoints
-// Small tablets and large smartphones (landscape view)
-// $screen-mobile: 320px;
-
-// Small tablets (portrait view)
-// $screen-tablet: 768px;
-
-// Tablets and small desktops
-// $screen-desktop: 1280px;
-
-// Large tablets and desktops
-// $screen-desktop-wide: 1680px;
-
-
-$screen-mob: 360px;
-$screen-tabl: 808px;
-$screen-desk: 1320px;
-$screen-desk-wide: 1720px;
